# aw_bot

./: .coverage  .env.example  .flake8  .gitignore  ALUR_DATA_LENGKAP.ipynb  Alur_Lengkap_Pemrosesan_Data_NLP.md  BUKTI_OCR_GUIDE.md  CALLBACK_AUDIT_REPORT.md  DEPLOY_HUGGING_FACE.md  DEPLOY_RENDER_SYSTEM.md  DOKUMENTASI_ALUR_PROSES.md  Dockerfile  README.md  RESTRUCTURING_SUMMARY.md  app.py  audit_system.py  black-check-output.txt  check_black.txt  check_isort.txt  contoh_ocr_ke_nlp.py  coverage.xml  debug-dashboard-date-no-response.md  debug-ocr-mistral-timeout.md  debug-save-dashboard-mismatch.md  debug_koreksi.py  debug_koreksi_teks.py  debug_processor.py  demo_alur_lengkap.py  demo_alur_proses.py  demo_multi.py  demo_simple.py  demo_typo.py  flake_remaining.txt  implementasi_nlp.md  implementation_plan.md  pengujian_nlp_rule_based.ipynb  pengujian_nlp_sistem.ipynb  pengujian_nlp_sistem_executed.ipynb  pyproject.toml  pyrightconfig.json  (+13 more)
.dbg/: dashboard-date-no-response.env  ocr-mistral-timeout.env  save-dashboard-mismatch.env  trae-debug-log-dashboard-date-no-response.ndjson  trae-debug-log-ocr-mistral-timeout.ndjson  trae-debug-log-save-dashboard-mismatch.ndjson
.github/workflows/: tests.yml
.ipynb_checkpoints/: ALUR_DATA-checkpoint.ipynb  ALUR_DATA_LENGKAP-checkpoint.ipynb  Alur_NLP_Pemrosesan_Data-checkpoint.ipynb  eval_sample_metrics-checkpoint.ipynb  pengujian_nlp_rule_based-checkpoint.ipynb  pengujian_nlp_sistem-checkpoint.ipynb  uji_confusion_intent_entitas-checkpoint.ipynb
.vercel/: project.json
aw_production_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bot/: core.py
config/: __init__.py  constants.py  settings.py
core/: bot_context.py  master_data.py
dashboard-web/: .gitignore  DEPLOY_RENDER.md  Dockerfile  README.md  README_HF_SPACE.md  next.config.ts  package-lock.json  package.json
dashboard-web/src/app/: layout.tsx  page.tsx
database/: db_client.py  gspread_mock.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md
files/: nlp_dataset.csv  nlp_dataset.json  nlp_normalization_dict.json  valid_units.txt
handlers/: __init__.py  base.py  callback_handler.py  callback_pengaturan.py  callback_transaksi.py  command_handler.py  crud_barang.py  crud_metode.py  crud_satuan.py  crud_transaksi.py  handler_dashboard.py  photo_handler.py  text_handler.py
handlers/callback/: __init__.py  barang.py  pengaturan.py  transaksi.py
handlers/command/: __init__.py  help.py  start.py
handlers/message/: __init__.py  photo.py  text.py
migrations/: 001_create_master_satuan.sql  run_migrations.py
nlp/: dictionaries.py  embedded_data.py  extractor.py  intent_matcher.py  normalizer.py  processor.py
notebooks/: Alur_Lengkap_Pemrosesan_Data_NLP.ipynb  Demo_Alur_Lengkap.ipynb  PANDUAN_ANALISIS_DATASET.md  README.md  Test_Mistral_OCR.ipynb
notebooks/.ipynb_checkpoints/: 01_Evaluasi_NLP_OCR-checkpoint.ipynb  02_Analisis_Dataset_Lengkap-checkpoint.ipynb  Alur_Lengkap_Pemrosesan_Data_NLP-checkpoint.ipynb  Demo_Alur_Lengkap-checkpoint.ipynb  Evaluasi_Lengkap_NLP-checkpoint.ipynb  Test_Mistral_OCR-checkpoint.ipynb
scripts/: analyze_dataset.py  embed_nlp_data.py  evaluate_nlp.py  export_datasets.py  generate_umkm_datasets.py  merge_datasets.py  migrate_files.py  refactor_imports.py  test_ocr_preprocessing.py
scripts/analysis/: analyze_syntax.py  check_ast.py  filter_ast.py
scripts/fixes/: __init__.py  auto_fix_try.py  fix_all.py  fix_empty.py  fix_excepts.py  fix_syntax.py  fix_try.py  unfix_try.py
scripts/utilities/: make_copies.py  ocr_runner.py  rewrite_dispatcher.py  split_callbacks.py  split_logic.py
services/: auto_reminder.py  cache_manager.py  daily_dashboard.py  dashboard_api.py  debt_tracker.py  ocr_preprocessor.py  ocr_service.py  session_manager.py  ui_common.py  ui_pengaturan.py  ui_transaksi.py  visualizer.py
tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_handlers.py  test_logger.py  test_services.py
utils/: helpers.py  logger.py  security.py
