[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aw-production-bot"
version = "1.0.0"
description = "AW Production Telegram Bot - Sistem POS dan Kasir Otomatis dengan OCR"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AW Production", email = "contact@aw-production.com"}
]
keywords = [
    "telegram",
    "bot",
    "pos",
    "ocr",
    "supabase",
    "nlp",
    "inventory",
    "debt-tracking"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]

dependencies = [
    # Core dependencies
    "pyTelegramBotAPI==4.14.0",
    "python-dotenv==1.0.0",
    "flask==3.0.0",
    "flask-cors>=4.0.0",
    
    # NLP & Text Processing
    "rapidfuzz==3.9.0",
    "thefuzz==0.20.0",
    
    # Supabase Integration
    "supabase==2.4.1",
    "SQLAlchemy>=1.4.31,<2.0.0",
    
    # Image Processing & OCR (Mistral only)
    "numpy<2",
    "opencv-python-headless==4.6.0.66",
    "Pillow==10.1.0",
    
    # Scheduler
    "schedule==1.2.2",
    
    # Visualization
    "matplotlib==3.8.2",
    
    # Utilities
    "requests>=2.31.0",
    "typing-extensions>=4.5.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pylint>=2.16.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "seaborn>=0.13.0",
    "pandas>=2.0.0",
]

frontend = [
    "next>=16.2.0",
    "react>=19.2.0",
    "react-dom>=19.2.0",
]

dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]

docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

all = [
    "aw-production-bot[dev,frontend,dashboard,docs]"
]

[project.urls]
Homepage = "https://github.com/yourusername/aw-production-bot"
Documentation = "https://aw-production-bot.readthedocs.io"
Repository = "https://github.com/yourusername/aw-production-bot.git"
"Bug Tracker" = "https://github.com/yourusername/aw-production-bot/issues"

[project.scripts]
aw-bot = "app:main"

[tool.setuptools]
packages = [
    "bot",
    "core",
    "config",
    "database",
    "handlers",
    "nlp",
    "services",
    "utils",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
    | venv
  | build
  | dist
  | migrations
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]
skip = [".venv", "venv", "build", "dist"]

[tool.flake8]
max-line-length = 100
extend-ignore = "E203,W503"
exclude = ".git,__pycache__,.venv,venv,build,dist,migrations,htmlcov,scratch,scripts"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/virtualenv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
